k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mentalo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - ateliers-mentalo.ch
        - www.ateliers-mentalo.ch
      secretName: mentalo-tls
  rules:
    - host: www.ateliers-mentalo.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentalo
                port:
                  number: 3000
